narwhal/config/tests/snapshots/config_tests__parameters_import.snap
---
source: narwhal/config/tests/config_tests.rs
expression: params
---
{
  "header_num_of_batches_threshold": 32,
  "max_header_num_of_batches": 100,
  "max_header_delay": "100ms",
  "gc_depth": 50,
  "sync_retry_delay": "5000ms",
  "sync_retry_nodes": 3,
  "batch_size": 500000,
  "max_batch_delay": "100ms",
  "block_synchronizer": {
    "range_synchronize_timeout": "30000ms",
    "certificates_synchronize_timeout": "2000ms",
    "payload_synchronize_timeout": "3000ms",
    "payload_availability_timeout": "4000ms",
    "handler_certificate_deliver_timeout": "30000ms"
  },
  "consensus_api_grpc": {
    "socket_addr": "/ip4/127.0.0.1/tcp/0/http",
    "get_collections_timeout": "5000ms",
    "remove_collections_timeout": "5000ms"
  },
  "max_concurrent_requests": 500000,
  "prometheus_metrics": {
    "socket_addr": "/ip4/127.0.0.1/tcp/0/http"
  }
}
